--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <a href="https://kkemmere.github.io/" class="link">Return</a>
-    <title>Document</title>
+    <title>Click Me</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
