--- a/index.html
+++ b/index.html
@@ -13,31 +13,34 @@
 <body>
     <h1>Click me!</h1>
     <br>
-    <div class="wrapper">
-        <div class="boxesC" id="1" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="2" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="3" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="4" onCLick="arrayWatcher(this.id)"></div>
+    <div class="backround-div">
+        <div class="mt">
+            <div class="wrapper">
+                <div class="boxesC" id="1" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="2" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="3" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="4" onCLick="arrayWatcher(this.id)"></div>
+            </div>
+            <div class="wrapper">
+                <div class="boxesC" id="5" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="6" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="7" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="8" onCLick="arrayWatcher(this.id)"></div>
+            </div>
+            <div class="wrapper">
+                <div class="boxesC" id="9" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="10" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="11" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="12" onCLick="arrayWatcher(this.id)"></div>
+            </div>
+            <div class="wrapper">
+                <div class="boxesC" id="13" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="14" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="15" onCLick="arrayWatcher(this.id)"></div>
+                <div class="boxesC" id="16" onCLick="arrayWatcher(this.id)"></div>
+            </div>
+        </div>
     </div>
-    <div class="wrapper">
-        <div class="boxesC" id="5" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="6" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="7" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="8" onCLick="arrayWatcher(this.id)"></div>
-    </div>
-    <div class="wrapper">
-        <div class="boxesC" id="9" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="10" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="11" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="12" onCLick="arrayWatcher(this.id)"></div>
-    </div>
-    <div class="wrapper">
-        <div class="boxesC" id="13" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="14" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="15" onCLick="arrayWatcher(this.id)"></div>
-        <div class="boxesC" id="16" onCLick="arrayWatcher(this.id)"></div>
-    </div>
-    <br>
 </body>
 <script src="index.js"></script>
 </html>
